--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,49 @@
+*.csv
+*.dat
+*.iml
+*.log
+*.out
+*.pid
+*.seed
+*.sublime-*
+*.swo
+*.swp
+*.tgz
+*.xml
+.DS_Store
+.idea
+.project
+.strong-pm
+node_modules
+npm-debug.log
+.sass-cache
+.tmp
+.soy.js
+node_modules
+npm-debug.log
+web/bower_components
+coverage
+docs
+
+# OS X
+.DS_Store
+.Spotlight-V100
+.Trashes
+
+# KDE
+.directory
+
+# Vim and other editors
+.*.sw[a-z]
+*.un~
+Session.vim
+/nbproject
+.idea
+.settings
+.project
+.buildpath
+
+
 # Python bytecode:
 *.py[co]
 
