--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "csurf": "^1.8.3",
     "elasticsearch": "^8.0.1",
     "express": "^4.13.3",
+    "marked": "^0.3.5",
     "passport": "^0.3.0",
     "passport-persona": "^0.1.7",
     "require-dir": "^0.3.0",
-    "yamljs": "^0.2.3",
-    "soynode": "^1.0.1"
+    "soynode": "^1.0.1",
+    "yamljs": "^0.2.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
